--- a/Web410603901/Views/Test/HW2.cshtml
+++ b/Web410603901/Views/Test/HW2.cshtml
@@ -3,7 +3,13 @@
     ViewBag.Title = "HW2";
 }
 
-<h2>HW2</h2>
+<p>印出1-10</p>
+@for (int i = 1; i <= 10; i++)
+{
+    <p>@i</p>
+}
+
+<h2>HW2 @DateTime.Now</h2>
 
 <p>姓名: @Html.TextBox("Name")</p>
 <p>帳號: @Html.TextBox("Account")</p>
@@ -22,3 +28,4 @@
     自我介紹:
     @Html.TextArea("About")
 </p>
+
